--- a/public/index.html
+++ b/public/index.html
@@ -84,9 +84,9 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="Digital Village Hackathon is a national level initiative for students to compete in solving pressing problems in the domain of precision agriculture, under the project “Digital Village: A Data-Driven Approach to Precision Agriculture in Small Farms”"
     />
-    <title>React App</title>
+    <title>Digital Village Hackathon</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
